--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,6 @@ body{
     }
   }
 .qr{
-    background: blue;
-    border-radius: 20px;
-    padding: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +33,10 @@ body{
 
     /* margin-right: 5%; */
 }
-
+img{
+    width: 100%;
+    border-radius: 20px;
+}
 
 .text_desc{
     color: #7D889E;
